Fixed popup width on mobiles

--- a/public/css/elements/imagePopup.less
+++ b/public/css/elements/imagePopup.less
@@ -28,6 +28,7 @@
 
   &_content {
 
+    min-width: 300px;
     margin:1em;
     overflow: hidden;
     position: absolute;
